# MatrixNotificationBot

./: .gitignore  CONTRIBUTING.md  README.md  SETUP.md  bot-messenger  pyproject.toml  sample.config.yaml  setup.cfg  setup.py
.github/workflows/: lint.yml
bot_messenger/: __init__.py  callbacks.py  chat_functions.py  config.py  httpserver.py  main.py  messages.py  utils.py
docker/: .env  Dockerfile  Dockerfile.dev  README.md  bot-messenger.service  docker-compose.yml  messenger_bot.service  start-dev.sh
my_project_name/: callbacks.py  chat_functions.py  config.py  httpserver.py  main.py
scripts-dev/: lint.sh
tests/: test_callbacks.py  test_config.py
